theme and license

--- a/_site.yml
+++ b/_site.yml
@@ -7,3 +7,8 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+output:
+  html_document:
+    theme: flatly
+    includes:
+      after_body: footer.html
