--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
       href: index.html
     - text: "Worked Examples"
       href: examples.html
+    - text: "Slides"
+      href: slides.html
   right:
     - text: "About"
       href: about.html
